# PAREFT

./: BLINDING_PROTOCOL.md  CONSTRAINTS_TRANSLATION_TEMPLATE.md  ETHICS_PRE-REG_TEMPLATE.md  LICENSE  README.md  __init__.py  analyse.py  cli.py  config.py  drive.py  eft.py  example.yaml  network.py  probes.py  pyproject.toml  pyroproject.toml  requirements.txt
.github/workflows/: demo-artifacts.yml  demo-run.yml  python-tests.yml
configs/: example.yaml
outputs/example/: metadata.json  order_parameter.csv  psd_J.csv  psd_phi.csv  timeseries.csv
pareft/: __init__.py  cli.py  simulate.py  utils.py
scripts/: analyze.py
tests/: test_psd.py
workflows/: python-tests.yml
