[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pareft"
version = "0.1.0"
description = "Programmable Axidilaton Resonant EFT research scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "pyyaml>=6.0",
  "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
include = ["pareft*"]
